--- a/index.html
+++ b/index.html
@@ -97,20 +97,20 @@
             <!-- Brocade Fits Gallery -->
             <div id="gallery-brocade" class="gallery-content grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4" style="display: grid;">
                 <!-- Brocade Item 1. NOTE: Replace placehold.co URLs with actual image paths -->
-                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('https://placehold.co/800x1200/364E94/ffffff?text=Brocade+Look+1')">
-                    <img src="https://placehold.co/400x600/364E94/ffffff?text=Brocade+1" 
+                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('brocade0.jpeg')">
+                    <img src="brocade0.jpeg" 
                          alt="Brocade Fit 1" 
                          class="w-full h-48 md:h-64 object-cover transform hover:scale-105 transition duration-500">
                 </div>
                 <!-- Brocade Item 2 -->
-                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('https://placehold.co/1200x800/2563EB/ffffff?text=Brocade+Look+2')">
-                    <img src="https://placehold.co/400x600/2563EB/ffffff?text=Brocade+2" 
+                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('image10.jpeg')">
+                    <img src="image10.jpeg" 
                          alt="Brocade Fit 2" 
                          class="w-full h-48 md:h-64 object-cover transform hover:scale-105 transition duration-500">
                 </div>
                 <!-- Brocade Item 3 -->
-                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('https://placehold.co/800x800/1D4ED8/ffffff?text=Brocade+Look+3')">
-                    <img src="https://placehold.co/400x600/1D4ED8/ffffff?text=Brocade+3" 
+                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('custom5.jpeg')">
+                    <img src="custom5.jpeg" 
                          alt="Brocade Fit 3" 
                          class="w-full h-48 md:h-64 object-cover transform hover:scale-105 transition duration-500">
                 </div>
@@ -119,14 +119,14 @@
             <!-- Custom Made Outfits Gallery -->
             <div id="gallery-custom" class="gallery-content grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4" style="display: none;">
                 <!-- Custom Item 1 -->
-                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('https://placehold.co/1000x1000/6D28D9/ffffff?text=Custom+Look+1')">
-                    <img src="https://placehold.co/400x600/6D28D9/ffffff?text=Custom+1" 
+                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('custom0.jpeg')">
+                    <img src="custom0.jpeg" 
                          alt="Custom Outfit 1" 
                          class="w-full h-48 md:h-64 object-cover transform hover:scale-105 transition duration-500">
                 </div>
                 <!-- Custom Item 2 -->
-                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('https://placehold.co/800x1100/4F46E5/ffffff?text=Custom+Look+2')">
-                    <img src="https://placehold.co/400x600/4F46E5/ffffff?text=Custom+2" 
+                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('custom1.jpeg')">
+                    <img src="custom1.jpeg" 
                          alt="Custom Outfit 2" 
                          class="w-full h-48 md:h-64 object-cover transform hover:scale-105 transition duration-500">
                 </div>
@@ -135,20 +135,20 @@
             <!-- Ankaras Gallery -->
             <div id="gallery-ankaras" class="gallery-content grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4" style="display: none;">
                 <!-- Ankara Item 1 -->
-                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('https://placehold.co/800x1200/8B5CF6/ffffff?text=Ankara+Look+1')">
-                    <img src="https://placehold.co/400x600/8B5CF6/ffffff?text=Ankara+1" 
+                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('ankara0.jpeg')">
+                    <img src="ankara0.jpeg" 
                          alt="Ankara Design 1" 
                          class="w-full h-48 md:h-64 object-cover transform hover:scale-105 transition duration-500">
                 </div>
                 <!-- Ankara Item 2 -->
-                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('https://placehold.co/1200x800/A78BFA/ffffff?text=Ankara+Look+2')">
-                    <img src="https://placehold.co/400x600/A78BFA/ffffff?text=Ankara+2" 
+                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('ankara1.jpeg')">
+                    <img src="ankara1.jpeg" 
                          alt="Ankara Design 2" 
                          class="w-full h-48 md:h-64 object-cover transform hover:scale-105 transition duration-500">
                 </div>
                 <!-- Ankara Item 3 -->
-                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('https://placehold.co/800x1000/4C1D95/ffffff?text=Ankara+Look+3')">
-                    <img src="https://placehold.co/400x600/4C1D95/ffffff?text=Ankara+3" 
+                <div class="bg-white rounded-lg overflow-hidden card-shadow cursor-pointer" onclick="openModal('image10.jpeg')">
+                    <img src="image10.jpeg" 
                          alt="Ankara Design 3" 
                          class="w-full h-48 md:h-64 object-cover transform hover:scale-105 transition duration-500">
                 </div>
