--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <section id="about" class="mb-12 p-6 bg-white rounded-xl card-shadow">
             <h2 class="text-3xl font-extrabold text-indigo-700 mb-4 border-b-2 border-indigo-200 pb-2">About Julie</h2>
             <p class="text-gray-700 leading-relaxed text-lg">
-                Highly motivated and results-driven professional with a Diploma in **Fashion Design and Interior Decoration**. My background combines creative vision with extensive practical experience in apparel production, quality control, and fashion instruction. I am committed to delivering outstanding performance by utilizing strong technical skills in **Garment Grading** and precision **Tailoring**, ensuring design concepts are translated into precise, high-quality finished products.
+                Highly motivated and results-driven professional with a Diploma in Fashion Design and Interior Decoration. My background combines creative vision with extensive practical experience in apparel production, quality control, and fashion instruction. I am committed to delivering outstanding performance by utilizing strong technical skills in Garment Grading and precision Tailoring, ensuring design concepts are translated into precise, high-quality finished products.
             </p>
             <div class="mt-6 flex flex-wrap gap-4">
                 <span class="text-sm font-medium bg-indigo-100 text-indigo-800 px-3 py-1 rounded-full">Garment Grading</span>
