--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             
             <!-- Primary CTA Button -->
             <a href="#contact" class="bg-white text-indigo-600 font-semibold py-2 px-6 rounded-full hover:bg-indigo-100 transition duration-300 shadow-md transform hover:scale-105">
-                Start a Project
+                Start a Project with Julie
             </a>
         </div>
     </header>
